--- a/css/style.css
+++ b/css/style.css
@@ -83,6 +83,7 @@ html{
 #home::before{
     content: "";
     background: url('../img/food-1209007.jpg') no-repeat center center/cover;
+    background: url('../img/pexels-dzenina-lukac-1583884.jpg') no-repeat center center/cover;
     position: absolute;
     height: 70%;
     width: 100%;
