--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Ubuntu', sans-serif;
 }
 html{
     scroll-behavior: smooth;
+    font-family: 'Ubuntu', sans-serif;
 }
 /* CSS Variables */
 :root{
@@ -48,7 +48,7 @@ html{
 
 #navbar ul{
     display: flex;
-    font-family: 'Josefin Slab', serif;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 #navbar ul li{
@@ -108,7 +108,6 @@ html{
 #services{
     margin: 34px;
     display: flex;
-
 }
 
 #services .box{
@@ -126,15 +125,7 @@ html{
    display: block;
 }
 
-#services .box p{
-    
-}
-
 /* Client Section */
-
-#clients-section{
-    
-}
 
 #clients{
     display: flex;
