--- a/css/style.css
+++ b/css/style.css
@@ -214,3 +214,14 @@ footer{
 .center{
     text-align: center;
 }
+
+.sub-btn{
+    padding: 6px 20px;
+    border: 2px solid white;
+    background-color: brown;
+    color: white;
+    margin: 17px;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    cursor: pointer;
+}
