--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ html{
 
 #home::before{
     content: "";
-    background: url('../img/pexels-dzenina-lukac-1583884.jpg') no-repeat center center/cover;
+    background: url('../img/pizza-5279378_1920.jpg') no-repeat center center/cover;
     position: absolute;
     height: 70%;
     width: 100%;
