--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ html{
 
 #home::before{
     content: "";
-    background: url('../img/pizza-5279378_1920.jpg') no-repeat center center/cover;
+    background: url('../img/joseph-gonzalez-fdlZBWIP0aM-unsplash.jpg') no-repeat center center/cover;
     position: absolute;
     height: 70%;
     width: 100%;
@@ -145,6 +145,7 @@ html{
 
 #contact{
     position: relative;
+    font-family: 'Josefin Sans', sans-serif;
 }
 
 #contact::before{
@@ -154,7 +155,7 @@ html{
     height: 100%;
     z-index: -1;
     opacity: 0.7;
-    background: url('../img/food-1209007.jpg') no-repeat center center/cover;
+    background: url('../img/davide-cantelli-jpkfc5_d-DI-unsplash.jpg') no-repeat center center/cover;
 }
 
 #contact-box{
@@ -178,6 +179,10 @@ html{
 
 #contact-box label{
     font-size: 1.3rem;
+}
+
+#contact-box .form-group{
+    margin-top: 1rem;
 }
 
 footer{
