--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ html{
 #contact{
     position: relative;
     font-family: 'Josefin Sans', sans-serif;
+    z-index: -1;
 }
 
 #contact::before{
