--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,7 @@ html{
     top: 0px;
     height: 80px;
     position: sticky;
+    z-index: 1;
 }
 
 #navbar::before{
@@ -163,6 +164,7 @@ html{
     justify-content: center;
     align-items: center;
     padding-bottom: 34px;
+    z-index: -1;
 }
 
 #contact-box input,
