--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 }
 html{
     scroll-behavior: smooth;
-    font-family: 'Ubuntu', sans-serif;
+    font-family: 'David Libre', serif;
 }
 /* CSS Variables */
 :root{
